updated with overflow auto so page >> will show correctly when scrolled out.

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,6 @@
 body {
 background-color:#39224f;
+overflow: auto;
 }
 
 #mainnav {
